Add new content to page

--- a/epperson-collection.html
+++ b/epperson-collection.html
@@ -85,6 +85,15 @@
             <button>Open media on zenodo</button>
           </a>
         </div>
+        <div class="perspective">
+          <p>
+            <h2>Program collection: Cleveland Institute of Music, Part II.</h2>
+            CIM concerts featuring Epperson between 1986 and 1987.
+          </p>
+          <a href="https://zenodo.org/records/14825770" target="_blank">
+            <button>Open media on zenodo</button>
+          </a>
+        </div>
       </div>
     </div>
   </body>
