--- a/koldofsky-collection.html
+++ b/koldofsky-collection.html
@@ -38,6 +38,15 @@
     <div class="content-layout-wrapper">
       <h1>Koldofsky Collection</h1>
       <div class="content-layout perspectives">
+        <div class="perspective center">
+          <p>
+            <h2>Audio Files: Interviews with Koldofsky Students and Colleagues</h2>
+            Excerpts from 10 interviews with Arlene Shrut, Juliana Gondek, John Keene, Grant Gershon, Erich Parce, Phillip Young, Dane Williams, Daniel Lockert, Judith Bible, and Mark Trawka in 2024.
+          </p>
+          <a href="https://zenodo.org/records/14809572" target="_blank">
+            <button>Open media on zenodo</button>
+          </a>
+        </div>
         <div class="perspective">
           <p>
             <h2>'Profiles in Music' Interview with William Triplett</h2>
