Fixed spelling mistakes

--- a/barr-collection.html
+++ b/barr-collection.html
@@ -41,7 +41,7 @@
         <div class="perspective">
           <p>
             <h2>Audio Files -  Barr Students and Colleagues </h2>
-            Excerpts from 6 online interviews with  Silvie Beaudette, Kristin Ditlow, Chris Foley, Thomas Lausmann, Alexandra Nguyen and  Judy Siebert in 2024.
+            Excerpts from 6 online interviews with  Sylvie Beaudette, Kristin Ditlow, Chris Foley, Thomas Lausmann, Alexandra Nguyen and  Judy Siebert in 2024.
             <a href="https://zenodo.org/records/14631729" target="_blank">
               <button>Open media on zenodo</button>
             </a>
