--- a/bossart-collection.html
+++ b/bossart-collection.html
@@ -66,7 +66,7 @@
         <div class="perspective">
           <p>
             <h2>1982 Professorship Appointment Bulletin</h2>
-            1982 Earl V Moore Professorship Appointment: Eugene Boxart, Box 13, News and Information Services (University of Michigan) Faculty and Staff Files, Bentley Historical Library, University of Michigan. Used with permission.
+            1982 Earl V Moore Professorship Appointment: Eugene Bossart, Box 13, News and Information Services (University of Michigan) Faculty and Staff Files, Bentley Historical Library, University of Michigan. Used with permission.
           </p>
           <iframe src="media/bossart/Bossart_Earl V Moore Professorship Appointment, 1982_News and Information Service Faculty and Staff Files, Box 13.pdf" title="Content"></iframe>
         </div>
@@ -80,14 +80,14 @@
         <div class="perspective">
           <p>
             <h2>Retirement Memoir, 1984</h2>
-            Bossart Retirement Memoir: Eugene Boxart, Box 13, News and Information Services (University of Michigan) Faculty and Staff Files, Bentley Historical Library, University of Michigan. Used with permission.
+            Bossart Retirement Memoir: Eugene Bossart, Box 13, News and Information Services (University of Michigan) Faculty and Staff Files, Bentley Historical Library, University of Michigan. Used with permission.
           </p>
           <iframe src="media/bossart/Bossart_Retirement Memoir, 1984_News and Information Service Faculty and Staff Files, Box 13..pdf" title="Content"></iframe>
         </div>
         <div class="perspective">
           <p>
             <h2>1968 Staff Biography</h2>
-            Bossart Staff Biography: Eugene Boxart, Box 13, News and Information Services (University of Michigan) Faculty and Staff Files, Bentley Historical Library, University of Michigan. Used with permission.
+            Bossart Staff Biography: Eugene Bossart, Box 13, News and Information Services (University of Michigan) Faculty and Staff Files, Bentley Historical Library, University of Michigan. Used with permission.
           </p>
           <iframe src="media/bossart/Bossart1968Biography.pdf" title="Content"></iframe>
         </div>
@@ -101,7 +101,7 @@
         <div class="perspective">
           <p>
             <h2>Undated Faculty Photo</h2>
-            Faculty Photo No-Date: Eugene Boxart, Box 13, News and Information Services (University of Michigan) Faculty and Staff Files, Bentley Historical Library, University of Michigan. Used with permission.
+            Faculty Photo No-Date: Eugene Bossart, Box 13, News and Information Services (University of Michigan) Faculty and Staff Files, Bentley Historical Library, University of Michigan. Used with permission.
           </p>
           <img src="media/bossart/Faculty Photo_ Eugene Bossart_no date_News and Information Service Faculty and Staff Files, Box 13.jpg" alt="Content">
         </div>
